Fixed alignment of create event button

--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -385,7 +385,7 @@ h4 {
 }
 
 .wrapper .content-home .banner-area .right .create-event-button {
-	margin-top: 19px;
+	margin-top: 45px;
 	margin-right: 45px;
 	float: right;
 }
